--- a/index.html
+++ b/index.html
@@ -4,18 +4,51 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+    <title>Jason McKinney</title>
+    <link rel="stylesheet" href="css/app.min.css">
   </head>
   <body>
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <h1>Welcome to Foundation</h1>
+    <div data-sticky-container>
+      <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium" data-sticky data-options="marginTop:0;">
+        <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
+        <div class="title-bar-title">Menu</div>
+      </div>
+      
+      <div class="top-bar" id="responsive-menu">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Jason McKinney</li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu" data-smooth-scroll data-offset="50">
+            <li><a href="#panel1">Experience</a></li>
+            <li><a href="#panel2">Work</a></li>
+            <li><a href="#panel3">Contact</a></li>
+          </ul>
         </div>
       </div>
-
+    </div>
+    <section id="panel1">
+      <div class="grid-container">
+        <div class="grid-x grid-padding-x">
+          <div class="large-12 cell">
+            <h1>Welcome to Foundation</h1>
+          </div>
+        </div>
+    </section>
+    <section id="panel2">
+      <div class="grid-container">
+        <div class="grid-x grid-padding-x">
+          <div class="large-6 cell">
+            <h1>Experience</h1>
+            <h2>Brands I've Helped</h2>
+          </div>
+          <div class="large-6 cell text-right">
+            <h3>tabs</h3>
+          </div>
+        </div>
+    </section>
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
           <div class="callout">
