Jason final updates.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jason McKinney</title>
     <link rel="stylesheet" href="css/app.min.css">
   </head>
-  <body>
+  <body id="top">
     <header>
       <div class="off-canvas-wrapper">
         <!-- Mobile Off-Canvas -->
@@ -18,34 +18,37 @@
               </button>
             </div>
             <ul class="vertical menu">
-              <li><a href="#section2" data-close>Experience</a></li>
-              <li><a href="#section3" data-close>Work</a></li>
-              <li><a href="#section4" data-close>Contact</a></li>
+              <li><a class="navigation" href="#section2" data-close>Experience</a></li>
+              <li><a class="navigation" href="#section3" data-close>Work</a></li>
+              <li><a class="navigation" href="#section4" data-close>Contact</a></li>
             </ul>
           </div>
           
           <!-- Desktop -->
           <div class="off-canvas-content" data-off-canvas-content>
+
             <div data-sticky-container>
               <div data-sticky data-options="marginTop:0;">
                 <div class="top-bar">
-                  <div class="top-bar-left show-for-medium" id="example-menu">
+                  <div class="top-bar-left show-for-medium">
                       <ul class="menu show-for-medium">
-                        <li class="menu-text"><a href="#top">Jason McKinney</a></li>
+                        <li class="menu-text">
+                          <a class="navigation" href="#top">Jason McKinney</a>
+                        </li>
                       </ul>
                   </div>
           
                   <div class="top-bar-right show-for-medium">
                     <ul class="menu">
-                      <li><a href="#section2">Experience</a></li>
-                      <li><a href="#section3">Work</a></li>
-                      <li><a href="#section4">Contact</a></li> 
+                      <li><a class="navigation" href="#section2">Experience</a></li>
+                      <li><a class="navigation" href="#section3">Work</a></li>
+                      <li><a class="navigation" href="#section4">Contact</a></li> 
                     </ul>
                   </div>
 
                   <!-- Mobile Top Nav -->
                   <div class="menu hide-for-medium">
-                    <a href="#top">Jason McKinney</a>
+                    <a href="#">Jason McKinney</a>
                   </div>
                   <div class="hide-for-medium">
                     <a data-toggle="offCanvas" class="float-right hamburger">&#x2630;</a>
