--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
                 </div>
                 <ul class="orbit-container">
                   <li class="is-active orbit-slide">
-                    <div class="grid-x grid-padding-x align-center">
-                      <div class="small-12 medium-6 cell text-right border-right">
+                    <div class="grid-x grid-padding-x align-center-middle">
+                      <div class="small-12 medium-6 cell text-right">
                         <img src="img/bc-logo.png">
                         <h5>Creative Director</h5>
                       </div>
-                      <div class="small-12 medium-4 cell">
+                      <div class="small-12 medium-4 cell job-info">
                         <h3>2012 - Present</h3>
                         <p>Responsibilities</p>
                         <ul>
@@ -154,12 +154,12 @@
                     </div>
                   </li>
                   <li class="orbit-slide">
-                    <div class="grid-x grid-padding-x align-center">
-                      <div class="small-12 medium-6 cell text-right border-right">
+                    <div class="grid-x grid-padding-x align-center-middle">
+                      <div class="small-12 medium-6 cell text-right">
                         <img src="img/bloom-logo.png">
                         <h5>Senior Partner</h5>
                       </div>
-                      <div class="small-12 medium-4 cell">
+                      <div class="small-12 medium-4 cell job-info">
                         <h3>2004 - 2012</h3>
                         <p>Responsibilities</p>
                         <ul>
@@ -173,12 +173,12 @@
                     </div>
                   </li>
                   <li class="orbit-slide">
-                    <div class="grid-x grid-padding-x align-center">
-                      <div class="small-12 medium-6 cell text-right border-right">
+                    <div class="grid-x grid-padding-x align-center-middle">
+                      <div class="small-12 medium-6 cell text-right">
                         <img src="img/marketlive.png">
                         <h5>Senior Designer</h5>
                       </div>
-                      <div class="small-12 medium-4 cell">
+                      <div class="small-12 medium-4 cell job-info">
                         <h3>1998 - 2004</h3>
                         <p>Responsibilities</p>
                         <ul>
@@ -190,12 +190,12 @@
                     </div>
                   </li>
                   <li class="orbit-slide">
-                    <div class="grid-x grid-padding-x align-center">
-                      <div class="small-12 medium-6 cell text-right border-right">
+                    <div class="grid-x grid-padding-x align-center-middle">
+                      <div class="small-12 medium-6 cell text-right">
                         <img src="img/cd-logo.png">
                         <h5>Senior Animator/Designer</h5>
                       </div>
-                      <div class="small-12 medium-4 cell">
+                      <div class="small-12 medium-4 cell job-info">
                         <h3>1995 - 1998</h3>
                         <p>Responsibilities</p>
                         <ul>
@@ -208,11 +208,11 @@
                     </div>
                   </li>
                   <li class="orbit-slide">
-                    <div class="grid-x grid-padding-x align-center">
-                      <div class="small-12 medium-6 cell text-right border-right">
+                    <div class="grid-x grid-padding-x align-center-middle">
+                      <div class="small-12 medium-6 cell text-right">
                         <img src="img/academy.png">
                       </div>
-                      <div class="small-12 medium-4 cell">
+                      <div class="small-12 medium-4 cell job-info">
                         <h3>1992 - 1996</h3>
                         <p>Emphasis</p>
                         <ul>
