Jason more updates.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="grid-x grid-padding-x align-bottom">
           <div class="small-12 medium-6 cell">
             <h1 class="meta">Experience</h1>
-            <h2 class="main">Brands I've Helped</h2>
+            <h2 class="main">Brands I've helped</h2>
           </div>
           <div class="small-12 medium-6 cell">
             <ul class="tabs" data-tabs id="logos">
@@ -102,7 +102,9 @@
                 <div class="cell"><img src="img/logo-krux.png"></div>
                 <div class="cell"><img src="img/logo-transpak.png"></div>
                 <div class="cell"><img src="img/logo-decision-lens.png"></div>
-                <div class="cell"><img src="img/logo-cloud-physics.png"></div>    
+                <div class="cell"><img src="img/logo-cloud-physics.png"></div>
+                <div class="cell"><img src="img/logo-si-bone.png"></div>
+                <div class="cell"><img src="img/logo-webdam.png"></div>
               </div>
             </div>
             <div class="tabs-panel" id="panel3">
@@ -110,7 +112,7 @@
                 <div class="cell"><img src="img/logo-stanley-smith.png"></div>
                 <div class="cell"><img src="img/logo-ucsf.png"></div>
                 <div class="cell"><img src="img/logo-whistlestop.png"></div>
-                <div class="cell"><img src="img/logo-shcp.png"></div>   
+                <div class="cell"><img src="img/logo-meritus.png"></div>
               </div>
             </div>
           </div>
