Jason more updates.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
               </button>
             </div>
             <ul class="vertical menu">
-              <li><a class="navigation" href="#section2" data-close>Experience</a></li>
-              <li><a class="navigation" href="#section3" data-close>Work</a></li>
+              <li><a class="navigation" href="#section2" data-close>Work</a></li>
+              <li><a class="navigation" href="#section3" data-close>Experience</a></li>
               <li><a class="navigation" href="#section4" data-close>Contact</a></li>
             </ul>
           </div>
@@ -40,8 +40,8 @@
           
                   <div class="top-bar-right show-for-medium">
                     <ul class="menu">
-                      <li><a class="navigation" href="#section2">Experience</a></li>
-                      <li><a class="navigation" href="#section3">Work</a></li>
+                      <li><a class="navigation" href="#section2">Work</a></li>
+                      <li><a class="navigation" href="#section3">Experience</a></li>
                       <li><a class="navigation" href="#section4">Contact</a></li> 
                     </ul>
                   </div>
@@ -70,7 +70,7 @@
       <div class="grid-container">
         <div class="grid-x grid-padding-x align-bottom">
           <div class="small-12 medium-6 cell">
-            <h1 class="meta">Experience</h1>
+            <h1 class="meta">Work</h1>
             <h2 class="main">Brands I've helped</h2>
           </div>
           <div class="small-12 medium-6 cell">
@@ -115,14 +115,20 @@
                 <div class="cell"><img src="img/logo-meritus.png"></div>
               </div>
             </div>
-          </div>
+          </div><!-- close tab content -->
+        </div><!-- close grid -->
+        <div class="grid-x grid-padding-x align-bottom">
+          <div class="small-12 cell text-center">
+            <small>Please <a class="navigation" href="#section4">contact</a> for work samples.</small>
+         </div>
         </div>
+      </div>
     </section>
     <section id="section3">
       <div class="grid-container">
         <div class="grid-x grid-padding-x align-center">
           <div class="small-12 cell text-center">
-            <h1 class="meta">Work</h1>
+            <h1 class="meta">Experience</h1>
             <h2 class="main">20+ years of interactive design & development</h2>
           </div>
         </div>
