--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-bike@2x.png 2x, img/jason-bike.png 1x" src="img/jason-bike.png"></div>
                   </div>
                   <div class="flex-column">
-                    <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-headshot@2x.png 2x, img/jason-headshot.png 1x" src="img/jason-headshot.png"></div>
+                    <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-desk-2@2x.png 2x, img/jason-desk-2.png 1x" src="img/jason-desk-2.png"></div>
                   </div>
                 </div>
               </div>
