--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <!-- Desktop -->
           <div class="off-canvas-content" data-off-canvas-content>
 
-            <div data-sticky-container>
+            <div data-sticky-container style="z-index: 12;">
               <div data-sticky data-options="marginTop:0;">
                 <div class="top-bar">
                   <div class="top-bar-left show-for-medium">
@@ -287,7 +287,7 @@
                     <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-bike@2x.png 2x, img/jason-bike.png 1x" src="img/jason-bike.png"></div>
                   </div>
                   <div class="flex-column">
-                    <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-desk-2@2x.png 2x, img/jason-desk-2.png 1x" src="img/jason-desk-2.png"></div>
+                    <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-desk-3@2x.png 2x, img/jason-desk-3.png 1x" src="img/jason-desk-3.png"></div>
                   </div>
                 </div>
               </div>
