--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason McKinney</title>
     <link rel="stylesheet" href="css/app.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
   </head>
   <body id="top">
     <header>
@@ -277,8 +281,28 @@
                     <div class="contact-info text-left center-for-small">
                       <p>(415) 299-0617<br>
                       San Rafael, CA</p>
-                      <a href="https://linkedin.com/in/jasonpmckinney" target="_blank"><img src="img/linkedin.png" width="30"></a>
-                      <a href="mailto:j@jasonmckinney.com"><img src="img/email.png" width="30"></a>
+                      <div class="connect">
+                        <a href="https://linkedin.com/in/jasonpmckinney" target="_blank">
+                        <?xml version="1.0" encoding="utf-8"?>
+                        <svg version="1.1" id="linkedin" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                          viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+                        <path id="background" class="st0" d="M30,60c16.6,0,30-13.4,30-30S46.6,0,30,0S0,13.4,0,30S13.4,60,30,60z"/>
+                        <path id="icon" class="st1" d="M21.9,43.8V25.5h-5.7v18.3H21.9z M21.9,19c0-1.6-1.1-2.9-2.9-2.9c-1.8,0-2.9,1.2-2.9,2.9
+                          c0,1.6,1.1,2.9,2.9,2.9h0C20.8,21.9,21.9,20.7,21.9,19z M31.2,43.8V33.4c0-0.6,0-1.1,0.2-1.5c0.4-1.1,1.5-2.3,3.2-2.3
+                          c2.2,0,3.7,1.3,3.7,3.8v10.4h5.7V33.1c0-5.7-3.1-8.4-7.1-8.4c-3.3,0-4.8,1.9-5.6,3.1l0-2.4h-5.7c0.1,1.8,0,18.4,0,18.4H31.2z"/>
+                        </svg>
+                        </a>
+                        <a href="mailto:j@jasonmckinney.com">
+                          <?xml version="1.0" encoding="utf-8"?>
+                          <svg version="1.1" id="email" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+                          <path id="background" class="st0" d="M30,60c16.6,0,30-13.4,30-30S46.6,0,30,0S0,13.4,0,30S13.4,60,30,60z"/>
+                          <path id="icon" class="st1" d="M14.6,18.4v23.2h30.8V18.4H14.6z M31,31.5c-0.2,0.2-0.6,0.4-1,0.4c-0.4,0-0.7-0.1-1-0.4L18.3,20.5h23.6L31,31.5
+                            z M24.5,30l-7.8,7.9V22.1L24.5,30z M26,31.5l1.5,1.5c0.6,0.6,1.5,1,2.5,1c1,0,1.9-0.4,2.5-1l1.5-1.5l7.7,7.9H18.3L26,31.5z M35.5,30
+                            l7.7-7.8v15.7L35.5,30z"/>
+                          </svg>
+                        </a>
+                      </div>
                     </div>
                   </div>
                 </div>
