--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="grid-x grid-padding-x align-bottom">
           <div class="small-12 medium-6 cell">
             <h1 class="meta">Work</h1>
-            <h2 class="main">Brands I've helped</h2>
+            <h2 class="main">Brands I've helped.</h2>
           </div>
           <div class="small-12 medium-6 cell">
             <ul class="tabs" data-tabs id="logos">
@@ -133,7 +133,7 @@
         <div class="grid-x grid-padding-x align-center">
           <div class="small-12 cell text-center">
             <h1 class="meta">Experience</h1>
-            <h2 class="main">20+ years of interactive design & development</h2>
+            <h2 class="main">20+ years of interactive design & development.</h2>
           </div>
         </div>
         <div class="grid-x grid-padding-x medium-margin-collapse">
@@ -265,7 +265,7 @@
           <div class="container">
             <div class="flex-row cell">
               <div class="flex-column">
-                <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-aiga@2x.png 2x, img/jason-aiga.png 1x" src="img/jason-aiga.png"></div>
+                <div class="hide-for-small-only"><img class="grid-img left-img" srcset="img/jason-aiga@2x.png 2x, img/jason-aiga.png 1x" src="img/jason-aiga.png"></div>
               </div>
               <div class="flex-column">
                 <div class="flex-row cell">
@@ -277,7 +277,7 @@
                       <h3>Jason McKinney</h3>
                     </div>
                   </div>
-                  <div class="flex-column">
+                  <div class="flex-column right-side">
                     <div class="contact-info text-left center-for-small">
                       <p>(415) 299-0617<br>
                       San Rafael, CA</p>
@@ -311,7 +311,7 @@
                     <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-bike@2x.png 2x, img/jason-bike.png 1x" src="img/jason-bike.png"></div>
                   </div>
                   <div class="flex-column">
-                    <div class="hide-for-small-only"><img class="grid-img" srcset="img/jason-desk-3@2x.png 2x, img/jason-desk-3.png 1x" src="img/jason-desk-3.png"></div>
+                    <div class="hide-for-small-only"><img class="grid-img right-img" srcset="img/jason-desk-3@2x.png 2x, img/jason-desk-3.png 1x" src="img/jason-desk-3.png"></div>
                   </div>
                 </div>
               </div>
